api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: uiuq/diario-online-backend:1
        ports:
          - containerPort: 8080
