front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-deploy
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: front-deploy
    spec:
      containers:
      - name: front-deploy
        image: uiuq/diario-online-frontend:4
        ports:
          - containerPort: 5173
