api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: api
