service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: LoadBalancer
  ports:
    - port: 5173
  selector:
    app: front-deploy
