ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.info
    - http:
      paths:
      - path: api-svc
        pathType: Prefix
        backend:
          service:
            name: ingress-api
            port:
              number: 8080
