network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-react-to-api
spec:
  podSelector:
    matchLabels:
      app: front-deploy
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: api
